--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -23,5 +23,5 @@ jobs:
           name: build and push image
           command: 
               docker build -t kaotu/hitme:live .
-              docker login -u="$DOCKER_USERNAME" -p="$DOCKER_PASSWORD"
+              docker login --username "$DOCKER_USERNAME" --password "$DOCKER_PASSWORD"
               docker push kaotu/hitme:live
