[FIX] step deploy

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -31,4 +31,4 @@ jobs:
           command: |
             . ENV/bin/activate
             cd ansible
-            ansible-playbook -i hosts deploy.yml --extra-vars "project_path=~/hitme"
+            ansible-playbook -i hosts deploy.yml --extra-vars "project_path=~/Desktop/myProject/HitMePls"
